add publishing requests index
